--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Ruby on Rails
 description: A web-app framework that includes everything needed to create database-backed web applications according to the Model-View-Controller (MVC) pattern.
 twitter: rails
 feed_path: /feed.xml
+world_title: Rails World
 
 plugins:
   - jekyll-feed
@@ -40,6 +41,10 @@ defaults:
       type: "world_speakers"
     values:
       layout: "world/speaker"
+  - scope:
+      path: "world"
+    values:
+      description: 5 & 6 October, 2023 - Beurs van Berlage, Amsterdam, NL
 
 markdown: kramdown
 highlighter: rouge
