--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Ruby on Rails
 description: A web-app framework that includes everything needed to create database-backed web applications according to the Model-View-Controller (MVC) pattern.
 twitter: rails
 feed_path: /feed.xml
-world_title: Rails World
+world_title: Rails World - 2023
 
 plugins:
   - jekyll-feed
@@ -48,7 +48,7 @@ defaults:
   - scope:
       path: "world"
     values:
-      description: 5 & 6 October, 2023 - Beurs van Berlage, Amsterdam, NL
+      description: October 5 & 6 - Beurs van Berlage, Amsterdam, NL
 
 markdown: kramdown
 highlighter: rouge
