add announcement copy

--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "This is the first announcement"
+- content: "A limited number of Early Bird tickets on sale now - book soon to secure your spot!"
