--- a/_data/world/faq.yml
+++ b/_data/world/faq.yml
@@ -1,65 +1,225 @@
 - category: General
   topics:
     - question: What is Rails World? Who is it for?
-      answer: Rails World is a conference focused on the Ruby on Rails framework. It brings together developers, engineers, and enthusiasts from around the world to discuss and explore the latest trends, techniques, and advancements in Rails development. It is designed for anyone with an interest in Ruby on Rails, from beginners to experienced professionals.
+      answer: >
+        Rails World is a conference focused on the Ruby on Rails framework.
+        It brings together developers, engineers, and enthusiasts from around
+        the world to discuss and explore the latest trends, techniques, an
+        d advancements in Rails development. It is designed for anyone with an
+        interest in Ruby on Rails, from beginners to experienced professionals.
+
     - question: Does Rails World have a Code of Conduct?
-      answer: You bet we do. [Please read the Code of Conduct here](/world/conduct). We are committed to making Rails World a safe space for all. If you have any issues please reach out to <a href="maito:world@rubyonrails.org">world@rubyonrails.org</a>.
+      answer: >
+        You bet we do. [Please read the Code of Conduct here](/world/conduct).
+        We are committed to making Rails World a safe space for all.
+        If you have any issues please reach out to
+        [world@rubyonrails.org](mailto:world@rubyonrails.org).
+
     - question: Will Rails World be livestreamed?
-      answer: We hope to be able to offer a livestream for those who are unable to attend in person. More information will be shared soon!
+      answer: >
+        We hope to be able to offer a livestream for those who are unable to
+        attend in person. More information will be shared soon!
+
     - question: Will the talks be recorded/published?
-      answer: Yes, all talks will be recorded and published on the Rails YouTube channel. Subscribe to the channel to be informed when the videos get published.
-Workshops will not be recorded.
+      answer: >
+        Yes, all talks will be recorded and published on the Rails
+        YouTube channel. Subscribe to the channel to be informed
+        when the videos get published. Workshops will not be recorded.
+
     - question: Will there be a conference app or Slack channel?
-      answer: There will be a conference app! A team of junior developers from the Agency of Learning are creating one especially for Rails World so that you can build your schedule and leave comments under sessions for other attendees or speakers. <a href="https://rubyonrails.org/2023/5/30/rails-foundation-and-agency-of-learning-partner-for-event-app">Read more here</a>. We will also have a Slack channel for updates, announcements, and a means for attendees to connect with each other.
+      answer: |-
+        There will be a conference app! A team of junior developers
+        from the Agency of Learning are creating one especially for
+        Rails World so that you can build your schedule and leave
+        comments under sessions for other attendees or speakers.
+
+        [Read more here](https://rubyonrails.org/2023/5/30/rails-foundation-and-agency-of-learning-partner-for-event-app).
+        We will also have a Slack channel for updates, announcements, and a means for attendees to connect with each other.
+
     - question: Should I stay for the weekend after Rails World?
-      answer: Staying longer in Amsterdam is never a bad idea - there is definitely plenty to do, and with 650 other attendees coming to Rails World, it's likely that you will have plenty of people to do things with as well!
+      answer: >
+        Staying longer in Amsterdam is never a bad idea - there is
+        definitely plenty to do, and with 650 other attendees coming
+        to Rails World, it's likely that you will have plenty of people
+        to do things with as well!
+
     - question: My question isn't answered here. Who can I contact?
-      answer: Reach out to us at <a href="maito:world@rubyonrails.org">world@rubyonrails.org</a>.
+      answer: >
+        Reach out to us at [world@rubyonrails.org](mailto:world@rubyonrails.org).
 
 - category: Tickets & Entry
   topics:
     - question: What is the refund policy?
-      answer: If you need to cancel your registration for Rails World, please let us know as soon as possible by emailing world@rubyonrails.org. Full refunds are available up to 45 days prior to the start of the event, minus a 4% transaction fee. If you cancel between 44 and 30 days prior to the event, you are eligible for a 50% refund, minus the transaction fee. Unfortunately, we cannot provide any refunds for cancellations less than 30 days prior to the event. However, you may transfer your ticket to another attendee free of charge up to 14 days prior to the start of Rails World.
+      answer: |-
+        If you need to cancel your registration for Rails World,
+        please let us know as soon as possible by emailing [world@rubyonrails.org](mailto:world@rubyonrails.org).
+
+        Full refunds are available up to 45 days prior to the start of the
+        event, minus a 4% transaction fee. If you cancel between 44 and 30 days
+        prior to the event, you are eligible for a 50% refund, minus the
+        transaction fee.
+
+        Unfortunately, we cannot provide any
+        refunds for cancellations less than 30 days prior to the event.
+        However, you may transfer your ticket to another attendee free of charge
+        up to 14 days prior to the start of Rails World.
+
     - question: Can I transfer my ticket to someone else?
-      answer: You may reassign your ticket to another attendee free of charge up to 14 days prior to the start of Rails World via the personal ticket link emailed to you from Tito (registration software) after booking. Search in your email for the subject line: "Your Rails World 2023 Ticket" from support@tito.io, and click on the 'Change details' button.
+      answer: |-
+        You may reassign your ticket to another attendee free of charge up
+        to 14 days prior to the start of Rails World via the personal
+        ticket link emailed to you from Tito (registration software)
+        after booking.
+
+        Search in your email for the subject line:
+        **Your Rails World 2023 Ticket** from _support@tito.io_,
+        and click on the **Change details** button.
+
     - question: What is the covid/mask policy?
-      answer: Given the dynamic nature of the COVID-19 pandemic, we will closely monitor the situation and adhere to the guidelines and regulations set by local health authorities and governments. As of now (June 2023), the Netherlands does not require testing, proof of vaccination, or masks at events, and so they will not be required for Rails World. Any changes in this policy will be communicated to attendees as soon as they are known. Those who feel more comfortable wearing masks are always welcome to do so, and we do ask that you abide by the new golden rule: if you feel unwell on the day of the event or the days leading up to the event, please do not come. In the event you test positive for Covid immediately before or on the first day of Rails World, your ticket cost will be transferred into credit to be used at the next Rails World event. To request credit for your attendance fee, or if you have any questions, please contact world@rubyonrails.org. 
+      answer: |-
+        Given the dynamic nature of the COVID-19 pandemic,
+        we will closely monitor the situation and adhere to the guidelines
+        and regulations set by local health authorities and governments.
+
+        As of now (June 2023), the Netherlands does not require testing,
+        proof of vaccination, or masks at events, and so they will not be
+        required for Rails World. Any changes in this policy will be communicated
+        to attendees as soon as they are known.
+
+        Those who feel more comfortable wearing masks are always welcome to do so,
+        and we do ask that you abide by the new golden rule: if you feel
+        unwell on the day of the event or the days leading up to the event,
+        please do not come.
+
+        In the event you test positive for Covid immediately
+        before or on the first day of Rails World, your ticket cost will be
+        transferred into credit to be used at the next Rails World event.
+
+        To request credit for your attendance fee, or if you have any questions,
+        please contact [world@rubyonrails.org](mailto:world@rubyonrails.org).
+
     - question: Do you have a scholarship or financial support program?
-      answer: We are currently looking for a sponsor to launch a robust scholarship program, and will share more details soon. However, if you are currently unemployed, or find the cost of attending Rails World prohibitive, please get in touch at <a href="maito:world@rubyonrails.org">world@rubyonrails.org</a>. We have set aside a limited number of tickets to assist in situations such as this.
+      answer: |-
+        We are currently looking for a sponsor to launch a robust
+        scholarship program, and will share more details soon.
+
+        However, if you are currently unemployed, or find the cost
+        of attending Rails World prohibitive, please get in touch at
+        [world@rubyonrails.org](mailto:world@rubyonrails.org).
+
+        We have set aside a limited number of tickets to assist in situations
+        such as this.
 
 
 - category: Venues & Hotels
   topics:
     - question: Where is the event taking place?
-      answer: Rails World will be held at the Beurs van Berlage in Amsterdam. This historic building used to be the home of the stock exchange, and is located in the heart of the city. We can't wait for you to see this beautiful space.
+      answer: |-
+        Rails World will be held at the Beurs van Berlage in Amsterdam.
+        This historic building used to be the home of the stock exchange,
+        and is located in the heart of the city.
+
+        We can't wait for you to see this beautiful space.
+
     - question: Where should I stay?
-      answer: We are working hard to secure event rates in various hotels in the city. Ticket holders will be sent details on how you can book these rates as soon as we have things finalized. We advise attendees to book as early as possible- while there are many hotels in Amsterdam, the daily rates are quite high for October (averaging €200 - 350 per night). Luckily, Amsterdam is a small city and easily accessible by bike, public transportation, or walking, so no matter where you stay in the city you won't be far from the event venue.
+      answer: |-
+        We are working hard to secure event rates in various hotels in
+        the city. Ticket holders will be sent details on how you can
+        book these rates as soon as we have things finalized.
+
+        We advise attendees to book as early as possible. While there are many
+        hotels in Amsterdam, the daily rates are quite high for October
+        (averaging €200 - €350 per night).
+
+        Luckily, Amsterdam is a small city and easily accessible by bike,
+        public transportation, or walking, so no matter where you stay in
+        the city you won't be far from the event venue.
 
 - category: Accessibility
   topics:
     - question: How do I communicate my accessibility needs to the Rails World organizers?
-      answer: Rails World is committed to making the event accessible to everyone. If you have specific accessibility needs or require any accommodations, please indicate that in the 'Accessibility needs' question of the registration form, and we will do our best to accommodate you.
+      answer: >
+        Rails World is committed to making the event accessible to everyone.
+        If you have specific accessibility needs or require any
+        accommodations, please indicate that in the 'Accessibility needs'
+        question of the registration form, and we will do our best
+        to accommodate you.
+
     - question: Will the conference be accessible by wheelchair?
-      answer: Yes, the Beurs van Berlage is wheelchair accessible, and wheelchair users can expect to use the lifts for:
-> Entering from the street to the lobby.
-> Descending to level -1 where the restrooms and cloakroom are located.
-> Ascending to the first floor where the workshops are held.
-All other programmed activity will take place on the ground level after you enter through the lobby.
+      answer: |
+        Yes, the Beurs van Berlage is wheelchair accessible, and wheelchair users can expect to use the lifts for:
+          * Entering from the street to the lobby.
+          * Descending to level -1 where the restrooms and cloakroom are located.
+          * Ascending to the first floor where the workshops are held.
+          * All other programmed activity will take place on the ground level after you enter through the lobby.
+
     - question: How much walking will be required?
-      answer: While the building is fairly long, most of the program will take place on two tracks and in the Sponsor Lounge, the entries of which are all located closely together, so walking can be kept to a minimum if need be, and there will be plenty of seating throughout the space to relax. Attending workshops will require a longer distance, as they are located one floor higher at the end of the building. To give some indication, the longest room is 45 meters/121 feet long.
+      answer: |-
+        While the building is fairly long, most of the program will take
+        place on two tracks and in the Sponsor Lounge, the entries of which
+        are all located closely together; meaning walking can be kept to a
+        minimum if need be. There will be plenty of seating throughout
+        the space to relax.
+
+        Attending workshops will require a longer
+        distance, as they are located one floor higher at the end of the
+        building. As an indication, the longest room is 45 meters (121 feet) long.
+
     - question: Will the talks have closed captioning?
-      answer: Closed captioning will be provided on the two main tracks to accommodate those with hearing impairments, as well as those who speak English as a second language and prefer to read spoken content. Screens will be set up next to the stage to display these captions, so attendees who wish to make use of the captions are advised to sit close to the screens for better viewing. Workshops will not have closed captioning.
+      answer: |-
+        Closed captioning will be provided on the two main tracks
+        to accommodate those with hearing impairments, as well as
+        those who speak English as a second language and prefer
+        to read spoken content.
+
+        Screens will be set up next to the
+        stage to display these captions, so attendees who wish
+        to make use of the captions are advised to sit close to
+        the screens for better viewing.
+
+        Workshops will not have closed captioning.
+
     - question: Will the livestream have closed captioning?
-      answer: This depends on if we offer a livestream. More info coming soon!
+      answer: >
+        This depends on if we offer a livestream. More info coming soon!
+
     - question: Are food and drinks included? Can special dietary requirements be accommodated?
-      answer: Rails World will provide breakfast, lunch, food breaks, and food and drink at the networking event that closes each day. Efforts are made to accommodate special dietary requirements, such as vegetarian, vegan, gluten-free, or other specific dietary restrictions. Please indicate your dietary needs during registration to ensure suitable arrangements are made.
+      answer: |-
+        Rails World will provide breakfast, lunch, food breaks, and
+        food and drink at the networking event that closes each day.
+
+        Efforts are made to accommodate special dietary requirements,
+        such as vegetarian, vegan, gluten-free, or other specific
+        dietary restrictions.
+
+        Please indicate your dietary needs during registration to ensure
+        suitable arrangements are made.
+
     - question: Does the venue have a cloakroom? Luggage room?
-      answer: Yes, the Beurs van Berlage venue is equipped with a manned cloakroom where attendees can store their coats, luggage and personal belongings during the event. Although this is a closed conference only open to ticket holders, attendees are always advised to watch their belongings closely.
+      answer: >
+        Yes, the Beurs van Berlage venue is equipped with a manned
+        cloakroom where attendees can store their coats,
+        luggage and personal belongings during the event.
+        Although this is a closed conference only open to ticket
+        holders, attendees are always advised to watch their belongings closely.
+
     - question: Does the venue have a nursing parents’ room?
-      answer: Not by design, so if you are a nursing parent, please indicate this on the registration form and we will assign a private meeting room for your needs.
+      answer: >
+        Not by design, so if you are a nursing parent,
+        please indicate this on the registration form and we
+        will assign a private meeting room for your needs.
+
     - question: Does Rails World provide childcare?
-      answer: Rails World does not typically provide childcare services directly. However, if you require assistance in finding childcare options during the conference, the organizers may be able to offer recommendations for reliable local services. It is advisable to contact the Rails World team in advance to discuss your childcare needs and receive appropriate guidance.
+      answer: |-
+        Rails World does not typically provide childcare services
+        directly. However, if you require assistance in finding
+        childcare options during the conference, the organizers
+        may be able to offer recommendations for reliable local
+        services.
+
+        It is advisable to contact the Rails World team
+        in advance to discuss your childcare needs and receive
+        appropriate guidance.
+
     - question: Does the venue have a single-occupancy or gender neutral bathroom?
       answer: Yes, there will be gender neutral bathrooms.
-
-      
