--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "A limited number of Early Bird tickets on sale now - book soon to secure your spot!"
+- content: "GONE IN 45 MINUTES: Rails World is now sold out. See you in Amsterdam!"
