--- a/_data/world/faq.yml
+++ b/_data/world/faq.yml
@@ -4,8 +4,7 @@
       answer: >
         Rails World is a conference focused on the Ruby on Rails framework.
         It brings together developers, engineers, and enthusiasts from around
-        the world to discuss and explore the latest trends, techniques, an
-        d advancements in Rails development. It is designed for anyone with an
+        the world to discuss and explore the latest trends, techniques, and advancements in Rails development. It is designed for anyone with an
         interest in Ruby on Rails, from beginners to experienced professionals.
 
     - question: Does Rails World have a Code of Conduct?
