--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ collections:
     output: true
     permalink: "/world/speakers/:name"
   world_sessions:
-    output: false
-    permalink: /world/sessions/:path/
+    output: true
+    permalink: "/world/agenda/:path"
 
 
 defaults:
@@ -45,6 +45,11 @@ defaults:
       type: "world_speakers"
     values:
       layout: "world/speaker"
+  - scope:
+      path: ""
+      type: "world_sessions"
+    values:
+      layout: "world/session"
   - scope:
       path: "world"
     values:
