--- a/_data/world/faq.yml
+++ b/_data/world/faq.yml
@@ -22,7 +22,7 @@
     - question: Will the talks be recorded/published?
       answer: >
         Yes, all talks will be recorded and published on the Rails
-        YouTube channel. Subscribe to the channel to be informed
+        [YouTube channel](https://www.youtube.com/@railsofficial). Subscribe to the channel to be informed
         when the videos get published. Workshops will not be recorded.
 
     - question: Will there be a conference app or Slack channel?
