--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ collections:
     output: true
     permalink: "/world/speakers/:name"
   world_sessions:
-    output: true
+    output: false
     permalink: "/world/agenda/:path"
 
 
