--- a/_data/world/sponsors.yml
+++ b/_data/world/sponsors.yml
@@ -1,20 +1,50 @@
 platinum:
   - name: AppSignal
-    logo: /assets/world/images/sponsors/RW-platinum-appsignal-logo.png
+    logo: /assets/world/images/sponsors/RW-logo-appsignal.svg
     url: https://www.appsignal.com/
 
 gold:
+  - name: Babbel
+    logo: /assets/world/images/sponsors/RW-logo-babbel.svg
+    url: https://www.babbel.com/
   - name: Shopify
-    logo: /assets/world/images/sponsors/RW-gold-logo-shopify.svg
+    logo: /assets/world/images/sponsors/RW-logo-shopify.svg
     url: https://www.shopify.com/
 
 silver:
+  - name: GitHub
+    logo: /assets/world/images/sponsors/RW-logo-github.svg
+    url: https://www.github.com/
   - name: Agency of Learning
     logo: /assets/world/images/sponsors/RW-logo-agency-of-learning.png
     url: https://agencyoflearning.com/
-  - name: Cedarcode
-    logo: /assets/world/images/sponsors/RW-logo-cedarcode.svg
-    url: https://www.cedarcode.com/
   - name: Buzzsprout
     logo: /assets/world/images/sponsors/RW-logo-buzzsprout.svg
     url: https://www.buzzsprout.com/
+  - name: Cedarcode
+    logo: /assets/world/images/sponsors/RW-logo-cedarcode.svg
+    url: https://www.cedarcode.com/
+  - name: ClickFunnels
+    logo: /assets/world/images/sponsors/RW-logo-clickfunnels.svg
+    url: https://www.clickfunnels.com/
+  - name: Clear Code Wizards
+    logo: /assets/world/images/sponsors/RW-logo-clear-code-wizards.svg
+    url: https://jeroennijhof.nl/
+  - name: Cookpad
+    logo: /assets/world/images/sponsors/RW-logo-cookpad.svg
+    url: https://cookpad.com/
+  - name: Doximity
+    logo: /assets/world/images/sponsors/RW-logo-doximity.svg
+    url: https://www.doximity.com/
+  - name: Fleetio
+    logo: /assets/world/images/sponsors/RW-logo-fleetio.svg
+    url: https://www.fleetio.com/
+  - name: Intercom
+    logo: /assets/world/images/sponsors/RW-logo-intercom.svg
+    url: https://www.intercom.com/
+  - name: Procore
+    logo: /assets/world/images/sponsors/RW-logo-procore.svg
+    url: https://procore.com/
+  - name: Planet Argon
+    logo: /assets/world/images/sponsors/RW-logo-planet-argon.png
+    url: https://planetargon.com/
