--- a/_data/world/sponsors.yml
+++ b/_data/world/sponsors.yml
@@ -29,7 +29,7 @@ silver:
     url: https://www.clickfunnels.com/
   - name: Clear Code Wizards
     logo: /assets/world/images/sponsors/RW-logo-clear-code-wizards.svg
-    url: https://jeroennijhof.nl/
+    url: https://clearcodewizards.com 
   - name: Cookpad
     logo: /assets/world/images/sponsors/RW-logo-cookpad.svg
     url: https://cookpad.com/
