Update metadata for Xavier

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -25,7 +25,7 @@ core:
     location: Catalonia
     url: https://hashref.com
     handle: fxn
-    image: /assets/images/core-xavier.png
+    image: /assets/images/core-xavier.jpg
 
   - name: Rafael
     since: 2012
