--- a/_data/world/sponsors.yml
+++ b/_data/world/sponsors.yml
@@ -37,7 +37,7 @@ silver:
     logo: /assets/world/images/sponsors/RW-logo-cedarcode.svg
     url: https://www.cedarcode.com/
   - name: JetBrains
-    logo: /assets/world/images/sponsors/RW-logo-jetbrains.svg
+    logo: /assets/world/images/sponsors/RW-logo-jetbrains1.svg
     url: https://www.jetbrains.com/
   - name: Rompslomp
     logo: /assets/world/images/sponsors/RW-logo-rompslomp2.svg
@@ -48,6 +48,9 @@ silver:
   - name: Clear Code Wizards
     logo: /assets/world/images/sponsors/RW-logo-clear-code-wizards.svg
     url: https://clearcodewizards.com 
+  - name: Gleam
+    logo: /assets/world/images/sponsors/RW-logo-gleam.svg
+    url: https://gleam.io/
   - name: Cookpad
     logo: /assets/world/images/sponsors/RW-logo-cookpad.svg
     url: https://cookpad.com/
