--- a/_data/world/sponsors.yml
+++ b/_data/world/sponsors.yml
@@ -86,7 +86,7 @@ silver:
     url: https://37signals.com/
   - name: Planet Argon
     logo: /assets/world/images/sponsors/RW-logo-planet-argon.png
-    url: https://planetargon.com/
+    url: https://www.planetargon.com/
   - name: BigBinary
     logo: /assets/world/images/sponsors/RW-logo-bigbinary.svg
     url: https://www.bigbinary.com/
