--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "GONE IN 45 MINUTES: Rails World is now sold out. See you in Amsterdam!"
+- content: "Rails World is a wrap! Thank you to all of the sponsors, speakers, and attendees. See you next time!"
