--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Rails World is a wrap! Thank you to all of the sponsors, speakers, and attendees. See you next time!"
+- content: "Rails World 2023 videos coming soon. Stay tuned."
