--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Rails World 2023 videos coming soon. Stay tuned."
+- content: "Rails World 2024 will take place in Toronto. Stay tuned for more details!"
