--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,4 @@
 items:
-  - title: Blog
-    url: /blog
 
   - title: Guides
     url: https://guides.rubyonrails.org
@@ -11,11 +9,17 @@ items:
   - title: Forum
     url: https://discuss.rubyonrails.org
 
+  - title: Contribute
+    url: https://github.com/rails/rails
+
   - title: Foundation
     url: /foundation
 
   - title: Team
     url: /community
 
-  - title: Contribute
-    url: https://github.com/rails/rails
+  - title: Blog
+    url: /blog
+
+  - title: Jobs
+    url: https://jobs.rubyonrails.org
