--- a/_data/world/announcements.yml
+++ b/_data/world/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Rails World 2024 will take place in Toronto. Stay tuned for more details!"
+- content: "Save the date: Rails World 2024 will take place Sept 26 & 27 in Toronto. More details soon!"
