--- a/_config.yml
+++ b/_config.yml
@@ -53,5 +53,6 @@ markdown: kramdown
 highlighter: rouge
 paginate: 10
 paginate_path: "/blog/page/:num"
+
 sass:
-  style: :compressed
+  style: compressed
