--- a/_data/world/2024/faq.yml
+++ b/_data/world/2024/faq.yml
@@ -33,11 +33,11 @@
 
     - question: What are the starting and ending times and dates so I can book my travel?
       answer: |-
-        Sept 25, 4pm: Pre-registration and badge pickup.
-        Sept 26, 9am: Day one, doors open at 9am at the venue.
-        Sept 27, 8pm: Day two, closing party ends. 
+        - Sept 25, 4pm: Pre-registration and badge pickup.
+        - Sept 26, 9am: Day one, doors open at 9am at the venue.
+        - Sept 27, 8pm: Day two, closing party ends. 
         
-        We recommend booking your return flight for Saturday September 28th if you want to attend the Rails World clsoing party without worrying about rushing to your flight in the same night.
+        We recommend booking your travel to arrive by 4pm on Wednesday September 25th and depart on Saturday September 28th if you want to attend the Rails World clsoing party without worrying about rushing to your flight in the same night.
         
     - question: My question isn't answered here. Who can I contact?
       answer: >
