--- a/_data/world/2024/faq.yml
+++ b/_data/world/2024/faq.yml
@@ -37,7 +37,7 @@
         - Sept 26, 9am: Day one, doors open at 9am at the venue.
         - Sept 27, 8pm: Day two, closing party ends. 
         
-        We recommend booking your travel to arrive by 4pm on Wednesday September 25th and depart on Saturday September 28th if you want to attend the Rails World clsoing party without worrying about rushing to your flight in the same night.
+        We recommend booking your travel to arrive by 4pm on Wednesday September 25th and depart on Saturday September 28th if you want to attend the Rails World closing party without worrying about rushing to catch your flight.
         
     - question: My question isn't answered here. Who can I contact?
       answer: >
