Fix 2024 announcement file
It was invalid YAML because of the double quotes in the content field.

--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Tickets will go on sale in April - sign up to the <a href="https://scattergun.email/public/mailing_lists/dqkHv7uGVfIj5kgJ/subscribe">mailing list</a> to be informed of details."
+- content: 'Tickets will go on sale in April - sign up to the <a href="https://scattergun.email/public/mailing_lists/dqkHv7uGVfIj5kgJ/subscribe">mailing list</a> to be informed of details.'
