Updated community page with new team members

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -104,8 +104,12 @@ issues:
     github: HParker
   - name: Adrianna Chang
     github: adrianna-chang-shopify
+  - name: Akhil G Krishnan
+    github: akhilgkrishnan
   - name: Alex Ghiculescu
     github: ghiculescu
+  - name: Dima Fakto
+    github: fatkodima
   - name: Edouard Chin
     github: Edouard-chin
   - name: Haroon Ahmed
@@ -120,8 +124,14 @@ issues:
     github: keeran
   - name: Leo Correa
     github: Tonkpils
+  - name: Luan Vieira
+    github: luanzeba
   - name: Mike Dalessio
     github: flavorjones
+  - name: Nikita Vasilevsky
+    github: nvasilevski
+  - name: Paul Reece
+    github: paulreece
   - name: Petrik de Heus
     github: p8
   - name: Prem Sichanugrist
