Added Matheus R to community.yml

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -126,6 +126,8 @@ issues:
     github: Tonkpils
   - name: Luan Vieira
     github: luanzeba
+  - name: Matheus Richard
+    github: MatheusRich
   - name: Mike Dalessio
     github: flavorjones
   - name: Nikita Vasilevsky
