--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: 'Announcement: Rails World Tickets will go on sale in April 30 at 1pm EDT.'
+- content: 'Rails World is now sold out. Stay tuned for more speakers announced soon.'
