fix Rails World FAQ yaml syntax error

--- a/_data/world/2024/faq.yml
+++ b/_data/world/2024/faq.yml
@@ -87,9 +87,8 @@
         In the event you test positive for Covid immediately before or on the first day of Rails World, your ticket cost will be transferred into credit to be used at the next Rails World event. To request credit for your attendance fee, or if you have any questions, please contact [world@rubyonrails.org](mailto:world@rubyonrails.org).  
 
     - question: Do you have a scholarship or financial support program?
-      answer: >
-
-      The financial support program is currently maxed out while we find sponsors for the current applicants. We will not be taking any further applicants at this time.
+      answer: |-
+        The financial support program is currently maxed out while we find sponsors for the current applicants. We will not be taking any further applicants at this time.
 
 
 - category: Venues & Hotels
