--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: 'Rails World is now sold out. Stay tuned for more speakers announced soon.'
+- content: 'A second small batch of tickets will be released Tuesday June 4 at 2pm ET.'
