--- a/_data/world/2024/faq.yml
+++ b/_data/world/2024/faq.yml
@@ -101,9 +101,7 @@
 
     - question: Where should I stay?
       answer: |-
-        We have secured event rates at 3 hotels in the city, chosen for: price, ease of access to the venue, and a decent hotel bar for after hours. 
-        
-        Ticket holders will be sent details on how you can book these rates in your confirmation.
+        The largest room block which still has availability is the Chelsea Hotel, a centrally located 3-star hotel. A night is $240 usd plus tax. Ticket holders will be sent details on how you can book these rates in your confirmation.
 
 - category: Accessibility
   topics:
