New TableCheck link on sponsors.yml

--- a/_data/world/2024/sponsors.yml
+++ b/_data/world/2024/sponsors.yml
@@ -60,4 +60,4 @@ gold:
     url: https://www.renuo.ch/
   - name: TableCheck
     logo: /assets/world/2024/images/sponsors/RW-logo-tablecheck.svg
-    url: https://www.tablecheck.com/en/japan
+    url: https://www.tablecheck.com/en/join/
