Update announcements.yml - Rails World last tickets sold out

--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: 'A second small batch of tickets will be released Tuesday June 4 at 2pm ET.'
+- content: 'Rails World is sold out. See you in Toronto Sept 26 & 27.'
