--- a/_data/world/2024/sponsors.yml
+++ b/_data/world/2024/sponsors.yml
@@ -22,6 +22,9 @@ gold:
   - name: Crunchy Data
     logo: /assets/world/2024/images/sponsors/RW-logo-crunchydata.svg
     url: https://www.crunchydata.com/
+  - name: Framework
+    logo: /assets/world/2024/images/sponsors/RW-logo-framework.png
+    url: https://frame.work/
   - name: Sentry
     logo: /assets/world/2024/images/sponsors/RW-logo-sentry.svg
     url: https://sentry.io/
@@ -31,9 +34,15 @@ gold:
   - name: Fullscript
     logo: /assets/world/2024/images/sponsors/RW-logo-fullscript.png
     url: https://fullscript.com/
+  - name: Telos Labs
+    logo: /assets/world/2024/images/sponsors/RW-logo-teloslabs.svg
+    url: https://hi.teloslabs.co/
   - name: Cedarcode
     logo: /assets/world/2024/images/sponsors/RW-logo-cedarcode.svg
     url: https://www.cedarcode.com/
+  - name: Coder
+    logo: /assets/world/2024/images/sponsors/RW-logo-coder.svg
+    url: https://coder.com/
   - name: ODDS
     logo: /assets/world/2024/images/sponsors/RW-logo-odds.svg
     url: https://odds.team/
