--- a/_data/community.yml
+++ b/_data/community.yml
@@ -108,7 +108,7 @@ issues:
     github: akhilgkrishnan
   - name: Alex Ghiculescu
     github: ghiculescu
-  - name: Dima Fakto
+  - name: Dima Fatko
     github: fatkodima
   - name: Edouard Chin
     github: Edouard-chin
