Add Andrew Novoselac to the triage team

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -102,6 +102,8 @@ committers:
 issues:
   - name: Adam Hess
     github: HParker
+  - name: Andrew Novoselac
+    github: andrewn617
   - name: Adrianna Chang
     github: adrianna-chang-shopify
   - name: Akhil G Krishnan
