Add Sean Doyle to the triage team

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -142,6 +142,8 @@ issues:
     github: sikachu
   - name: Robin Dupret
     github: robin850
+  - name: Sean Doyle
+    github: seanpdoyle
   - name: Vipul A M
     github: vipulnsward
   - name: Zak Scott
